<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ledOnOff"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/ledoff"
        android:drawableLeft="@drawable/ic_baseline_not_interested_24"
        android:drawablePadding="-10dp"
        android:fontFamily="@font/ubuntumonoregular"
        android:paddingLeft="10dp"
        android:text="@string/LedOff"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/day"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:height="32dp"
        android:background="@drawable/filterbutton"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/day"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/day3"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:height="32dp"
        android:background="@drawable/filterbutton"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/day3"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/week"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:height="32dp"
        android:background="@drawable/filterbutton"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/week"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/day3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/month"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:height="32dp"
        android:background="@drawable/filterbutton"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/month"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/week"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/month6"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:height="32dp"
        android:background="@drawable/filterbutton"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/month6"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@+id/ledOnOff" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="410dp"
        android:layout_height="407dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week">

    </com.github.mikephil.charting.charts.LineChart>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/dashboard"
        android:textColor="#000000"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/temperatura"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:height="32dp"
        android:background="@drawable/filterbutton2"
        android:drawableStart="@drawable/ic_baseline_check_box_24"
        android:fontFamily="@font/ubuntumonoregular"
        android:paddingLeft="15dp"
        android:text="@string/temp"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/humidade"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:height="32dp"
        android:background="@drawable/filterbutton2"
        android:drawableStart="@drawable/ic_baseline_check_box_24"
        android:fontFamily="@font/ubuntumonoregular"
        android:paddingLeft="15dp"
        android:text="@string/hum"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="77dp"
        android:background="@drawable/footer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_home_24" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_dataset_24" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_settings_24" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>