<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="77dp"
        android:background="@drawable/footer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_home_24" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_dataset_24" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_settings_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/definitions"
        android:textColor="#000000"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ubuntumonoregular"
        android:text="@string/temp"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntumonoregular"
        android:text="@string/hum"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:inputType="number"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="168dp"
        android:paddingEnd="10dp"
        android:height="32dp"
        android:background="@drawable/ledon"
        android:fontFamily="@font/ubuntumonoregular"
        android:paddingLeft="15dp"
        android:text="@string/done"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hum" />" />


</androidx.constraintlayout.widget.ConstraintLayout>