<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValuesFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="77dp"
        android:background="@drawable/footer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_home_24" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_dataset_24" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/footer"
            android:src="@drawable/ic_outline_settings_24" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="357dp"
        android:layout_height="570dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatura"
        app:layout_constraintVertical_bias="0.555" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/temperatura"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:height="32dp"
        android:background="@drawable/filterbutton2"
        android:drawableStart="@drawable/ic_baseline_check_box_24"
        android:fontFamily="@font/ubuntumonoregular"
        android:paddingLeft="15dp"
        android:text="@string/temp"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/humidade"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:height="32dp"
        android:background="@drawable/filterbutton2"
        android:drawableStart="@drawable/ic_baseline_check_box_24"
        android:fontFamily="@font/ubuntumonoregular"
        android:paddingLeft="15dp"
        android:text="@string/hum"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/temperatura"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntumonobold"
        android:text="@string/sensor"
        android:textColor="#000000"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>